add to html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>title</title>
 </head>
 
 <body>
-    
+    <h1>PROJECT NAME</h1>
+    <form>
+        Current Bank Amount:
+        <input type="number" name="current_amount">
+        <br>
+        Paycheck Amount:
+        <input type="number" name="paycheck">
+        <br>
+        Goal Name:
+        <input type="text" name="g_name">
+        Goal Amount:
+        <input type="number" name="g_amount">
+
+        <br>
+    </form>
 </body>
+
 </html>
