--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>MAN TOU</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
@@ -12,16 +12,18 @@
     <form>
         Current Bank Amount:
         <input type="number" name="current_amount">
-        <br>
+        <br><br>
         Paycheck Amount:
         <input type="number" name="paycheck">
-        <br>
+        <br><br>
         Goal Name:
         <input type="text" name="g_name">
         Goal Amount:
         <input type="number" name="g_amount">
-
-        <br>
+        <br><br>
+        Amount save per paycheck:
+        <input type="number" name="save">
+        <br><br>
     </form>
 </body>
 
