--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         Amount save per paycheck:
         <input type="number" name="save">
         <br><br>
-        
+
     </form>
+    <button type="submit">Submit</button>
 </body>
 
 </html>
