--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br><br>
 
     </form>
-    <button type="submit">Submit</button>
+    <input type="submit" value="Submit">
 </body>
 
 </html>
