--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         Amount save per paycheck:
         <input type="number" name="save">
         <br><br>
+        Deductable essentials: 
+        <input type="number" name="essentials">
+        <button></button>
+        <br><br>
         <input type="submit" value="Submit">
     </form>
 </body>
