--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br><br>
         Deductable essentials: 
         <input type="number" name="essentials">
-        <button></button>
+        <button>Enter</button>
         <br><br>
         <input type="submit" value="Submit">
     </form>
