add options to deductables

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <br><br>
         Deductable essentials: 
         <input type="number" name="essentials">
+        <select name="time">
+            <option value="day">Day</option>
+            <option value="week">Week</option>
+            <option value="month">Month</option>
+        </select>
         <button>Enter</button>
         <br><br>
         <input type="submit" value="Submit">
