added javascript file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>MAN TOU</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="submit.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <input type="number" name="current_amount">
         <br><br>
         Paycheck Amount:
-        <input type="number" name="paycheck">
+        <input type="number" id="check"> <button onclick="HowMuchAPayCheck();return false;">Enter</button>
         <br><br>
         Goal Name:
         <input type="text" name="g_name">
