--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         Paycheck Amount:
         <input type="number" id="check">
         <select id="checkType">
-            <option>Paid Weekly</option>
-            <option>Paid Bi-Weekly</option>
+            <option value="weekly">Paid Weekly</option>
+            <option value="bi-weekly">Paid Bi-Weekly</option>
+            <option value="monthly">Paid Monthly</option>
         </select>
         <br><br>
         Goal Name:
@@ -32,7 +33,6 @@
         Deductible essentials:
         <input id="deductibles" type="number">
         <select id="dateType">
-            <option value="day">Day</option>
             <option value="week">Week</option>
             <option value="month">Month</option>
         </select>
@@ -41,6 +41,7 @@
             onclick="howMuchDoYouWantToSaveBeforeDeductibles();howMuchDeductiblesPerX();return false;">Submit</button>
     </form>
     <p id="howlong"></p>
+    <p id=""></p>
 </body>
 
 </html>
