--- a/homepage.html
+++ b/homepage.html
@@ -89,8 +89,8 @@
                 </div>
             </p>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg" value="submit"
-            onclick="howMuchDoYouWantToSave(); return false;">Submit</button><br><br><br><br><br><br><br><br>
+        <button type="submit" id="button" class="btn btn-primary btn-lg" value="submit"
+            onclick="howMuchDoYouWantToSaveBeforeDeductibles(); return false;">Submit</button><br><br><br><br><br><br><br><br>
 
     </form>
     <p id="howlong"></p>
