--- a/outputpage.html
+++ b/outputpage.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
 
@@ -12,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="C:\Users\Stannie\Documents\Web\hackathonfinal\homepage.css">
+    <link rel="stylesheet" href="homepage.css">
 
     <title>Finances</title>
 
@@ -22,12 +24,13 @@
 
 </head>
 
-    <body>
+<body>
 
 
     <h1>hello</h1>
 
 
 
-    </body>
+</body>
+
 </html>
