no longer can press enter

--- a/outputpage.html
+++ b/outputpage.html
@@ -25,12 +25,10 @@
 </head>
 
 <body>
-
-
-    <h1>hello</h1>
-
-
-
+    <div class="jumbotron">
+        <h1><span class="fa fa-money"></span> Expenses Tracker</h1>
+    </div>
+    <p id="howlong"></p>
 </body>
 
 </html>
