last working copy

--- a/outputpage.html
+++ b/outputpage.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="C:\Users\Stannie\Documents\Web\hackathonfinal\homepage.css">
+    <link rel="stylesheet" href="homepage.css">
 
     <title>Finances</title>
 
