--- a/homepage.html
+++ b/homepage.html
@@ -13,9 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="homepage.css">
     <!-- js -->
-    <script src="homepage.js">
-
-    </script>
+    <script src="homepage.js"> </script>
     <!-- -->
 
     <title>Finances</title>
@@ -86,7 +84,7 @@
                 </div>
             </p>
         </div>
-        <button type="submit" id="button" class="btn btn-primary btn-lg" value="submit"
+        <button type="submit" class="btn btn-primary btn-lg" value="submit"
             onclick="howMuchDoYouWantToSaveBeforeDeductibles();howMuchDeductiblesPerX(); return false;">Submit</button><br><br><br><br><br><br><br><br>
 
         <br><br><br><br><br><br><br><br>
