--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="homepage.css">
     <!-- js -->
-    <script src="homepage.js"> </script>
+    <script src="homepage.js">
+    </script>
     <!-- -->
 
     <title>Finances</title>
@@ -85,9 +86,12 @@
             </p>
         </div>
         <button type="submit" class="btn btn-primary btn-lg" value="submit"
-            onclick="howMuchDoYouWantToSaveBeforeDeductibles();howMuchDeductiblesPerX(); return false;">Submit</button><br><br><br><br><br><br><br><br>
+            onclick="howMuchDoYouWantToSaveBeforeDeductibles();howMuchDeductiblesPerX();return false;">Submit</button>
 
         <br><br><br><br><br><br><br><br>
+
+
+        <p id="howlong"></p>
     </form>
 
     <!--                end of form                 -->
