add image and edit homepage

--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="homepage.css">
+    <link rel="shortcut icon" type="image/png" href="images.png" />
     <!-- js -->
     <script src="homepage.js">
     </script>
@@ -54,7 +55,7 @@
             <p class="form-group" name="goal">
                 What is your goal?
             </p>
-            <input type="text" class="form-control" id="g_name" placeholder=" Vacation" required><button
+            <input type="text" class="form-control" id="g_name" placeholder="Ex: Vacation, Laptop, Car" required><button
                 class="nextbutton btn btn-primary btn-lg" href="#goalamount"><span>Next</span></button>
         </div>
         <div class="userinput">
