--- a/homepage.html
+++ b/homepage.html
@@ -13,8 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="homepage.css">
     <!-- js -->
-    <script src="homepage.js">
-    </script>
+    <script src="homepage.js"></script>
     <!-- -->
 
     <title>Finances</title>
@@ -91,7 +90,7 @@
         <br><br><br><br><br><br><br><br>
 
 
-        <p id="howlong"></p>
+        <h2 text-align=center id="howlong"></h2>
     </form>
 
     <!--                end of form                 -->
