--- a/outputpage.html
+++ b/outputpage.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="homepage.css">
 
+    <script src="homepage.js"></script>
+
     <title>Finances</title>
 
     <!--                    title of the website            -->
@@ -28,7 +30,7 @@
     <div class="jumbotron">
         <h1><span class="fa fa-money"></span> Expenses Tracker</h1>
     </div>
-    <p id="howlong"></p>
+    <p id="howlong">YOYO</p>
 </body>
 
 </html>
