--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
     <script src="homepage.js"></script>
     <!-- -->
 
-    <title>Rain Check</title>
+    <title>Piggy Bank</title>
 
     <!--                    title of the website            -->
 </head>
@@ -26,7 +26,7 @@
 
 
     <div class="jumbotron">
-        <h1><span class="fa fa-money"></span> Rain Check</h1>
+        <h1><span class="fa fa-money"></span> Piggy Bank</h1>
     </div>
     <form class="inputs">
         <div class="userinput">
